alignment fix
alignment was off for vertical

--- a/main.css
+++ b/main.css
@@ -6,13 +6,17 @@ body{
     font-size: 15px;
 }
 .cards{
-    position: relative;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translate(25%, -50%);
+    transform: translate(25%, -50%);
+
     display: flex;
     flex-direction: row;
     width: 65vw;
     height: auto;
     padding: auto;
-    margin: auto;
 
 }
 
